
Fcgi.tcl HISTORY

1998-01-08  version 0.1  tpoindex
	first working version, 0.1


1998-01-12  version 0.2
	added resetCgiEnv if running with cgi.tcl


1998-01-16  version 0.3
	first working version of c extension, move tcl source to tcl-src/,
	add c extension source to c-src/, modify existing makefile, add
	new c makefile, change configure script to check for fcgi-devel-kit
	directory


1998-01-28  version 0.4
	additional cleanup of code (remove early debugging info) 
	modify tclFcgiCmd.c to better deal with resetting cgi.tcl state


2021-04-23  version 0.5  dbohdan
        remove the C source code (you can get newer) and autoconf; stop
        overriding top-level channel commands; update the examples.


2021-05-01
        go back to overriding top-level channel commands: without [read stdin]
        acting like in a CGI environment [ncgi::query] hangs on a POST
        request; fix the override code with Tom Poindexter's patch from
        comp.lang.tcl; add package Fcgi::helpers (tcl-src/fcgi-helpers.tcl);
        update the examples some more.


2024-05-11  version 0.5.1
        port to Tcl 9;
        keep and restore Tcl 8.0 compatibility.